--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>女の子のホームページ</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
   </head>
   <body>
     <p>女の子は毎日、雨の日も嵐の日もクソ長いクソ長いクソ道を歩いて、クソみたいな学校に通っています。
