--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
   </head>
   <body>
-    <p>女の子は毎日、雨の日も嵐の日もクソ長いクソ長いクソ道を歩いて、クソみたいな学校に通っています。
+    <p class="subtitle">女の子は毎日、雨の日も嵐の日もクソ長いクソ長いクソ道を歩いて、クソみたいな学校に通っています。
 ときどき外観も気持ち悪いバスを見かけて『中が気持ち悪いオタクでぎゅうぎゅうで息苦しそうだから私みたいに小さくてキュートな美少女が入ったら窒息死して死体も潰れそうだなぁ』と、女の子は思いました。
 そんな夏のある日、女の子はとうとうバスに乗りました。そしてでっかくて気持ち悪いオタクがいたので、女の子は『うわ気色悪いキモオタク〜早く消え失せろよ』とオタクに聞こえるように言いました。そしたらオタクはなぜか泣き出して、なぜか扉を壊してでていってしまいました。女の子は「私は何もしていないのに！どうして？」と言いました
 女の子は自分は悪くないと思ったので、気持ち悪いオタクが泣いているのを嘲笑っても良いと思いました。なので、女の子は笑いました。周りに聞こえるよう笑いました。周りからは引かれましたが、快感だったので、次は「ここにいるデブ、オタク全員消え失せろ！！！」と言ってみました。今度は気持ち悪いオタクが全員、なぜか泣いて前のオタクが壊したドアから出ていってしまいました。女の子は「なんで？私は悪くないと言いました。
