--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@
   <br>
   <h1 class="title">お問い合わせ</h1>
   <p>このページの管理者の連絡先は下記の通りです</p>
-  <a href="tell:07069691650">07069691650</a> <a href="mail:tomoki_1008@icloud.com">tomoki_1008@icloud.com</a>
+  <a href="tel:070-6969-1650">07069691650</a> <a href="mail:tomoki_1008@icloud.com">tomoki_1008@icloud.com</a>
 </html>
