--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </body>
   <br>
   <h1 class="title">あらすじ一覧</h1>
-  <a href="ind.htm">あらすじ1</a>
+  <a href="password.htm">あらすじ1</a>
   <p>女の子は毎日、雨の日も嵐の日もクソ長い...</p>
-  <a href="ind.htm">あらすじ2</a>
+  <a href="password.htm">あらすじ2</a>
   <p>女の子は毎日、雨の日も嵐の日もクソみた...</p>
   <br>
   <h1 class="title">お問い合わせ</h1>
