--- a/password.htm
+++ b/password.htm
@@ -32,7 +32,7 @@
         }
     }
     function home() {
-      window.location.href = "home.html";
+      window.location.href = "index.html";
     }
 </script>
 </html>
